# dto/role_dto.go
@@ -1,8 +1,22 @@
 package dto
 
-type RoleDto struct {
-	RoleId   int    `json:"role_id"`
-	RoleName string `json:"role_name"`
-	IsAdmin  bool   `json:"is_admin"`
-	RoleKey  string `json:"role_key"`
-}
+type (
+	Role struct {
+		RoleId   uint   `json:"role_id"`
+		RoleName string `json:"role_name"`
+		IsAdmin  bool   `json:"is_admin"`
+		RoleKey  string `json:"role_key"`
+	}
+
+	CreateRole struct {
+		RoleName string `json:"role_name"`
+		IsAdmin  bool   `json:"is_admin"`
+		RoleKey  string `json:"role_key"`
+	}
+
+	UpdateRole struct {
+		RoleName string `json:"role_name"`
+		IsAdmin  bool   `json:"is_admin"`
+		RoleKey  string `json:"role_key"`
+	}
+)
