# handlers/role/role_handler.go
@@ -2,6 +2,7 @@ package roleHandler
 
 import (
 	"net/http"
+	"serverhealthcarepanel/dto"
 	"serverhealthcarepanel/services/role"
 	"serverhealthcarepanel/utils/code"
 	"serverhealthcarepanel/utils/response"
@@ -9,18 +10,19 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+// CreateRole
 // @Summary Create role
 // @Description Create role
 // @Accept json
 // @Produce json
 // @Tags Role
 // @Param role_id path int true "role_id"
-// @Param payload body roleService.CreateRoleStruct true "YES"、
+// @Param payload body dto.CreateRole true "YES"、
 // @Success 200 {object} response.Struct
 // @Failure 400 {object} response.Struct "wrong request parameter"
 // @Router /role [post]
 func CreateRole(ctx echo.Context) error {
-	newRole := new(role.CreateRoleStruct)
+	newRole := new(dto.CreateRole)
 
 	if err := ctx.Bind(&newRole); err != nil {
 		return response.Error(ctx, http.StatusBadRequest, code.InvalidParams, code.GetMsg(code.InvalidParams), err.Error())
@@ -28,7 +30,6 @@ func CreateRole(ctx echo.Context) error {
 
 	if err := ctx.Validate(*newRole); err != nil {
 		return response.Error(ctx, http.StatusBadRequest, code.InvalidParams, code.GetMsg(code.InvalidParams), err.Error())
-
 	}
 
 	if err := role.CreateRole(newRole); err != nil {
