# models/role_model.go
@@ -5,14 +5,12 @@ import (
 )
 
 type Role struct {
-	RoleId    int      `gorm:"NOT NULL;primary_key;" json:"role_id"` // role coding
-	CreatedAt JSONTime `gorm:"type:timestamp;default:current_timestamp" json:"created_at"`
-	UpdatedAt JSONTime `gorm:"type:timestamp;default:current_timestamp" json:"updated_at"`
-	DeletedAt JSONTime `gorm:"type:timestamp;default:current_timestamp" json:"deleted_at"`
-	RoleName  string   `gorm:"type:varchar(128);" json:"role_name"` // role Name
-	IsAdmin   bool     `gorm:"type:int(1);DEFAULT:0;NOT NULL;" json:"is_admin"`
-	Status    int      `gorm:"type:int(1);DEFAULT:0;NOT NULL;" json:"status"`
-	RoleKey   string   `gorm:"type:varchar(128);uniqueIndex;" json:"role_key"` // role code
+	RoleId uint `gorm:"NOT NULL;primary_key;" json:"role_id"` // role coding
+	BaseModelTime
+	RoleName string `gorm:"type:varchar(128);" json:"role_name"` // role Name
+	IsAdmin  bool   `gorm:"type:int(1);DEFAULT:0;NOT NULL;" json:"is_admin"`
+	Status   int    `gorm:"type:int(1);DEFAULT:0;NOT NULL;" json:"status"`
+	RoleKey  string `gorm:"type:varchar(128);uniqueIndex;" json:"role_key"` // role code
 }
 
 func (Role) TableName() string {
