# routers/role_router.go
@@ -1,12 +1,13 @@
 package routers
 
 import (
-	roleHandler "serverhealthcarepanel/handlers/role"
+	"serverhealthcarepanel/handlers/role"
+	"serverhealthcarepanel/middleware"
 
 	"github.com/labstack/echo/v4"
 )
 
 func InitRoleRouter(Router *echo.Group) {
-	role := Router.Group("/role") // , middleware.JWTHandler()
+	role := Router.Group("/role", middleware.JWTHandler())
 	role.POST("", roleHandler.CreateRole)
 }
