# routers/user_router.go
@@ -1,14 +1,23 @@
 package routers
 
 import (
-	authHalder "serverhealthcarepanel/handlers/auth"
-	userHalder "serverhealthcarepanel/handlers/user"
-
 	"github.com/labstack/echo/v4"
+	"net/http"
+	"serverhealthcarepanel/handlers/auth"
+	"serverhealthcarepanel/handlers/user"
+	"serverhealthcarepanel/middleware"
 )
 
 func InitUserRouter(Router *echo.Group) {
-	Router.POST("/login", authHalder.UserLogin)
-	user := Router.Group("/user") // , middleware.JWTHandler()
-	user.POST("", userHalder.CreateUser)
+	Router.POST("/login", authHandler.UserLogin)
+	Router.POST("/register", userHandler.CreateUser)
+
+	user := Router.Group("/user", middleware.JWTHandler())
+	user.GET("", getUsers)
+}
+
+var users = []string{"Joe", "Veer", "Zion"}
+
+func getUsers(c echo.Context) error {
+	return c.JSON(http.StatusOK, users)
 }
